--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutterallplatforms
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.pdouvch.flutterallplatforms.flutterallplatforms
+PRODUCT_BUNDLE_IDENTIFIER = com.pdouvch.flutter.allplatforms
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.pdouvch.flutterallplatforms. All rights reserved.
