update upload image with web

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_app_check: ^0.1.1+1
   firebase_core: ^2.1.0
+  firebase_storage: ^11.0.2
   flutter:
     sdk: flutter
   go_router: ^5.1.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
