--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   firebase_app_check: ^0.1.1+1
+  firebase_auth: ^4.0.2
   firebase_core: ^2.1.0
   firebase_storage: ^11.0.2
   flutter:
